--- a/temp.html
+++ b/temp.html
@@ -81,6 +81,7 @@
   const diskCleanup = require('disk-cleanup');
 
 
+  //size will given in the bytes in all functions
   // Deletes files of a specified size from a given directory.
   diskCleanup.filterEqual('/path/to/directory', size, (err, result) =&gt; { 
       if (err) {
@@ -111,7 +112,40 @@
   });
 
 
+
+  //if u know size not in bytes than you can simply convert by functions:
+  diskCleanup.filterSmaller('/path/to/directory', kb_to_bytes(size in bytes), (err, result) =&gt; {
+  if (err) {
+      console.error('Error:', err);
+  } else {
+      console.log('Result:', result);
+  }
+  });
+
+
+
+
   
+</code></pre>
+</li>
+</ul>
+<blockquote>
+<blockquote>
+<p><em><strong>Size conversion</strong></em></p>
+</blockquote>
+</blockquote>
+<ul>
+<li>
+<pre><code class="language-js">
+  kb_to_bytes(20) // convert 20 kb into bytes
+  mb_to_bytes(20) //20 mb to bytes
+  gb_to_bytes(10) //10 gb to bytes
+  tb_to_bytes(20)
+  pb_to_bytes(20)
+  eb_to_bytes(20)
+  zb_to_bytes(20)
+  yb_to_bytes(20)
+
 </code></pre>
 </li>
 </ul>
