--- a/temp.html
+++ b/temp.html
@@ -140,7 +140,7 @@
   kb_to_bytes(20) // convert 20 kb into bytes
   mb_to_bytes(20) //20 mb to bytes
   gb_to_bytes(10) //10 gb to bytes
-  tb_to_bytes(20)
+  tb_to_bytes(20) //20 tb to bytes
   pb_to_bytes(20)
   eb_to_bytes(20)
   zb_to_bytes(20)
